--- a/inicio.html
+++ b/inicio.html
@@ -64,9 +64,9 @@
 					<a href="https://www.youtube.com/channel/UCbc6zZQQadSusIa7geV4UAw"class="Youtube_ico" target="_Blank000_"><i class="fab fa-youtube"></i></a>
 					<a href="" class="Discord_ico"><i class="fab fa-discord"></i></a>
 					<a href="https://twitter.com/AstageUnlimited" class="twitter_ico"><i class="fab fa-twitter"></i></a>
-				<div>
+				<!--<div>
 				<img src="https://imgur.com/RDnzlBu.png" alt="Astage" title="©AstageUnlimited" class="imagen">
-			</div>
+			</div>-->
 		</section>
 		<!--           HISTORIA           -->
 		<section class="history" id="historia">
