--- a/inicio.html
+++ b/inicio.html
@@ -64,9 +64,11 @@
 					<a href="https://www.youtube.com/channel/UCbc6zZQQadSusIa7geV4UAw"class="Youtube_ico" target="_Blank000_"><i class="fab fa-youtube"></i></a>
 					<a href="" class="Discord_ico"><i class="fab fa-discord"></i></a>
 					<a href="https://twitter.com/AstageUnlimited" class="twitter_ico"><i class="fab fa-twitter"></i></a>
-				<div class="contenedor_imgp">
-					<img src="https://imgur.com/RDnzlBu.png" alt="Astage" title="©AstageUnlimited" class="imagen">
 				</div>
+			</div>
+			<div class="contenedor_imgp">
+				<img src="https://imgur.com/RDnzlBu.png" alt="Astage" title="©AstageUnlimited" class="imagen">
+			</div>
 
 		</section>
 		<!--           HISTORIA           -->
