--- a/Contactanos.html
+++ b/Contactanos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Astage Unlimited</title>
-  <link rel="stylesheet" type="text/css" href="contactanos.css">
+  <link rel="stylesheet" type="text/css" href="Contactanos.css">
   <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="icon" href="https://i.imgur.com/btN3U0t.png">
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
