--- a/inicio.html
+++ b/inicio.html
@@ -51,7 +51,7 @@
 		<section class="Portada">
 			<div class="Principal">
 				<h1 class="Title"> Astage Unlimited </h1>
-				<!--<img class="imagen" src="https://imgur.com/14gwe7d.png" alt="Astage" title="©AstageUnlimited">-->
+				<!---<img class="imagen" src="https://imgur.com/14gwe7d.png" alt="Astage" title="©AstageUnlimited">-->
 			</div>
 		</section>
 		<!--           INICIO       -->
