--- a/Contactanos.html
+++ b/Contactanos.html
@@ -49,7 +49,7 @@
             
           </ul>
         </article>
-        <!-- PARA INTRODUCIR MAS ADELANTE
+        <!-- PARA INTRODUCIR MAS ADELANTE -->
         <aside id="sidebar">
           <div class="dark">
             <h3>Para contacto</h3>
@@ -73,7 +73,7 @@
   						<button class="button_1" type="submit">Enviar</button>
 					</form>
           </div>
-        -->
+        
         </aside>
       </div>
     </section>
