--- a/Contactanos.html
+++ b/Contactanos.html
@@ -18,7 +18,7 @@
             <li class="lista"><a href="inicio.html" class="lista_deco"><i class="fas fa-home"></i> Inicio</a></li>
             <li class="lista"><a href="historia.html" class="lista_deco"><i class="fas fa-file"></i>  Historia</a></li>
             <li class="lista"><a href="base.html" class="lista_deco"><i class="fab fa-fort-awesome-alt"></i> Base</a></li>  
-            <li class="lista"><a href="contactanos.html" class="lista_deco"><i class="fas fa-car"></i> Contactanos</a></li>  
+            <li class="lista"><a href="Contactanos.html" class="lista_deco"><i class="fas fa-car"></i> Contactanos</a></li>  
             <li class="lista"><a href="proximamente.html" class="lista_deco"><i class="fas fa-exclamation"></i> Mods</a></li>
             <li class="lista"><a href="https://www.youtube.com/channel/UCbc6zZQQadSusIa7geV4UAw" class="lista_deco" target="_Blank_000"><i class="fab fa-youtube"></i> Canal de Youtube</a></li>
           </ul>
