--- a/inicio.html
+++ b/inicio.html
@@ -49,9 +49,13 @@
 <body>
 	<main>
 		<section class="Portada">
-			<div class="Principal">
+			<div class="Principal_noresponsive">
 				<h1 class="Title"> Astage Unlimited </h1>
-				<!---<img class="imagen" src="https://imgur.com/14gwe7d.png" alt="Astage" title="©AstageUnlimited">-->
+				<!--<img class="imagen" src="https://imgur.com/14gwe7d.png" alt="Astage" title="©AstageUnlimited">-->
+			</div>
+			<div class="Principal_responsive">
+				<h2 class="Title"> Astage Unlimited</h2>
+				<img src="https://i.imgur.com/0oa25qe.png" alt="Astage" title="©AstageUnlimited" class="imagen_responsive"> 
 			</div>
 		</section>
 		<!--           INICIO       -->
